--- a/lib/language/lang/language_text.json
+++ b/lib/language/lang/language_text.json
@@ -476,7 +476,7 @@
     {
         "text_id": "hotel_found",
         "en": "Restaurant Found",
-        "fr": "Hôtel trouvé",
+        "fr": "Restaurant trouvé",
         "ar": "العثور على مطعم",
         "ja": "ホテルが見つかりました"
     },
