--- a/lib/language/lang/language_text.json
+++ b/lib/language/lang/language_text.json
@@ -361,8 +361,8 @@
     },
     {
         "text_id": "book_now",
-        "en": "Book now",
-        "fr": "Destination\npopulaire",
+        "en": "Resrve now",
+        "fr": "Réserver maintenant",
         "ar": " احجز الآن",
         "ja": "今予約する"
     },
